editor/css/stylesheet.css
/* ... */
.nodestatement
{
  margin: auto;
  padding: 0;
  width: 100%;
  height: 100%;
  font: inherit;
}

.text
{
  width: 420px;
}

#languages
{
  position: absolute;
  right: 0;
  padding-right: 20px;
}

#sidebar textarea
{
  width: 300px;
  resize: vertical;
}

a[data-disabled]
{
  text-decoration: line-through;
}

.clickable:hover
{
  cursor: pointer;
}

/* Warning: initialiseGrid looks up this rule using the exact selector text.
 * If you change the selector, change the lookup too!
 */
.gridded
{
  position: absolute;
  width: 250px;
  height: 50px;
}

#gridIndicator
{
  display: none;
  -moz-border-radius: 0.5em;
  -webkit-border-radius: 0.5em;
  border-radius: 0.5em;
  background-color: blue;
  opacity: 0.2;
  pointer-events: none;
  /*start invisible, main.js will show on mouse enter of #main*/
}

#categorySelect
{
  min-width: 4em;
}

#wrap
{
  position: absolute;
  display: table;
  width: 100%;
  height: 100%;
}

  #wrap > div
  {
    display: table-row;
  }

    #wrap > div > div
    {
      display: table-cell;
      vertical-align: top;
    }

#content
{
  display: table;
  width: 100%;
  height: 100%;
}

  #content > div
  {
    display: table-row;
  }

    #content > div > div
    {
      display: table-cell;
    }

#mainCell
{
  overflow: hidden;
  height: 100%;
}

#main
{
  position: relative;
  overflow: auto;
  height: 100%;
}

#metadata table,
#propertyValuesSection table,
#characterSection table
{
    margin-bottom: 20px;
    width: 100%;
    table-layout: fixed;
}

#metadata th,
#propertyValuesSection th,
#characterSection th
{
    font-weight: normal;
    text-align: left;
    vertical-align: top;
}

#metadata td,
#propertyValuesSection td,
#characterSection td
{
    text-align: left;
    vertical-align: top;
    word-wrap: break-word;
}

#metadata td input,
#metadata td select,
#propertyValuesSection td input,
#propertyValuesSection td select,
#propertyValuesSection td textarea,
#characterSection td input,
#characterSection td select
{
  width: 100%;
  box-sizing: border-box;
}

#metadata tr,
#propertyValuesSection tr,
#characterSection tr
{
  border-bottom: 1px solid black;
}

#toolbar
{
  background-color: #d6d6d6;
}

#logo {
  width: 32px;
  height: 32px;
  position: absolute;
  top: 0;
  padding: 8px;
  box-sizing: border-box;
  background: #662D91;
  transition: 0.5s background ease-out;
}

#logo:hover {
  transition: 0.1s background ease-in-out;
  background: #a345e5;
}

#logo img {
  fill: white;
  width: 16px;
  height: 16px;
  transition: 0.5s top ease-out;
}

button img
{
  vertical-align: middle;
}

.enabled
{
  background-color: Highlight !important;
}

#toolbar button,
#properties button,
#sidebar button,
#parameters button,
#evaluations button,
.enumeration-values-container button
{
  border: 0;
  background: none;
}

#properties button,
#sidebar button
{
  padding-right: 1px;
  padding-left: 1px;
  color: #666;
  font-size: 16px;
}

#properties h1
{
  font-size: 40px;
}

.enumeration-values-container li
{
  clear: both
}

.enumeration-values-container span,
.enumeration-values-container input
{
  float: left;
}

.enumeration-values-container button
{
  float: right;
}

#toolbar button
{
  margin: 1px;
  padding: 0;
  height: 69px;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
  border-radius: 5px;
  /*padding-left: 1px;
    padding-right: 1px;*/
}

#toolbar .small-buttons
{
  float: left;
  padding: 1px;
}

  #toolbar .small-buttons *
  {
    margin: 0;
    padding: 2px;
  }

  #toolbar .small-buttons button
  {
    display: block;
    width: 120px;
    height: 23px;
    text-align: left;
  }

  #toolbar .small-buttons img
  {
    margin: 0 3px;
    width: 10px;
    height: 10px;
  }

#toolbar .big-buttons
{
  float: left;
  padding: 1px;
}

  #toolbar .big-buttons *
  {
    margin: 0;
  }

  #toolbar .big-buttons button
  {
    min-width: 50px;
  }

  #toolbar .big-buttons div
  {
    margin: 0 1px;
  }

  #toolbar .big-buttons img
  {
    margin: auto;
    margin-bottom: 5px;
    width: 30px;
    height: 30px;
    display: block;
  }

#toolbar button div
{
  margin: 3px;
  font-weight: normal;
  font-size: 12px;
}

#toolbar button:hover, #toolbar .dropped
{
  background-color: #2ecc71;
  color: #fff;
  cursor: pointer;
}

#toolbar :disabled, #toolbar :disabled:hover
{
  outline: none;
  border: none;
  background-color: transparent;
  color: #000;
  opacity: 0.3;
  cursor: default !important;
}

#toolbar #manual
{
  float: right;
  overflow: hidden;
  margin: 5px;
  width: 25px;
  height: 25px;
  -moz-border-radius: 100%;
  -webkit-border-radius: 100%;
  border-radius: 100%;
}

  #toolbar #manual img, #toolbar #manual div
  {
    margin: 0;
    padding: 0;
    width: 25px;
    height: 25px;
  }

#toolbar .separator
{
  margin: 5px 0;
  padding: 0;
  width: 125px;
  height: 3px;
  background-color: #ecf0f1;
}

#sidebar
{
  width: 475px;
  height: 100%;
  background-color: #bdc3c7;
  color: #666;
  position: relative;
  min-width: 5px; /* Grip */
}

  #sidebar > div
  {
    position: relative;
    width: 100%;
    height: 100%;
  }

    #sidebar > div > div
    {
      position: absolute;
      top: 0;
      right: 0;
      bottom: 0;
      left: 0;
      overflow: auto;
      padding: 5px;
    }
    #sidebar .grip
    {
        position: absolute;
        top: 0;
        bottom: 0;
        left: -5px;
        width: 10px;
        z-index: 100;
        cursor: ew-resize;
        user-select: none;
        background: #000;
        opacity: 0;
    }
    #sidebar .grip:hover
    {
        transition: 0s opacity 0.1s linear;
        opacity: 0.25;
    }
    #sidebar.dragging > *
    {
        opacity: 0.5;
    }
#properties
{
  display: inline-block;
  min-width: 100%;
}

.header h1
{
  margin-top: 5px;
  margin-bottom: 5px;
  white-space: nowrap;
  font-size: 55px;
}

.header img
{
  margin-right: 10px;
  vertical-align: middle;
}

.sub-header h2
{
  margin-top: 0;
  margin-bottom: 7px;
  white-space: nowrap;
  font-size: 20px;
}
/* ... */

